--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="p-5">
-  <h2>Angular Routing</h2>
+  <h2>Angular Routing: {{ message }}</h2>
 
   <ul>
     <li routerLink="home">Home</li>
